# FMPlugInTemplate

./: .gitignore  CMakeLists.txt  FM_Template.txt  README.md
Libraries/Mac/FMWrapper.framework/Versions/A/: FMWrapper
Libraries/Mac/FMWrapper.framework/Versions/A/Headers/: README.txt
Libraries/Mac/FMWrapper.framework/Versions/A/Resources/: Info.plist
Libraries/Win/x64/: FMWrapper.lib
Libraries/iphoneos/: FMWrapper.framework
Libraries/iphoneos/iOSAppSDK.framework/: Info.plist  iOSAppSDK
Libraries/iphoneos/iOSAppSDK.framework/Headers/: FMXCalcEngine.h
Libraries/iphonesimulator/: FMWrapper.framework
Libraries/iphonesimulator/iOSAppSDK.framework/: Info.plist  iOSAppSDK
Libraries/iphonesimulator/iOSAppSDK.framework/Headers/: FMXExtern.h
PlugIn/: PlugInTemplate.fmx64  PlugIn_Template.fmx64
src/: PlugInTemplate.cpp
